--- a/app/views/contentFeed.html
+++ b/app/views/contentFeed.html
@@ -18,10 +18,10 @@
 </div><br/>
 
 <h2 class="heading">Content generated:</h2>
-<template ngFor let-it [ngForOf]="list | filter:FilterByUserName">
+<template ngFor let-it [ngForOf]="list | filter:FilterBanned | filter:FilterByUserName">
 	<div class="grid-100 mobile-grid-100 grid-parent auditRow">
 		<a href="#">
-			<div align="center" class="grid-25 mobile-grid-100 grid-parent auditPic" style="background: #fff url(./img/exampleAudit.jpg) no-repeat 0 0; background-size: cover;"></div>
+			<div align="center" class="grid-25 mobile-grid-100 grid-parent auditPic" style="background: #fff url(./static/img/exampleAudit.jpg) no-repeat 0 0; background-size: cover;"></div>
 		</a>
 		<div class="grid-60 mobile-grid-100 grid-parent auditDesc">
 			<div class="auditRowHeader">{{it.username}}: <small>{{it.published * 1000 | date}}</small></div>
@@ -36,7 +36,7 @@
 		</div>
 		<div class="grid-15 mobile-grid-100 grid-parent auditLast" align="center">
 			<a href="{{it.url}}" class="btn btn-block btn-micro btn-blue ghost" target="_blank">View</a><br/><br/>
-			<button class="btn btn-block btn-micro btn-scarlet ghost" (click)="ban(it.infID)">Ban</button>
+			<a href="javascript:" class="btn btn-block btn-micro btn-scarlet ghost" (click)="ban(it.infID)">Ban</a>
 			<br/>
 		</div>
 	</div>
