--- a/app/views/app.html
+++ b/app/views/app.html
@@ -1,24 +1,16 @@
 <div class="grid-container page">
 	<user-header *ngIf="!noNav"></user-header>
-	<template ngFor let-n [ngForOf]="notifications">
-		<div class="notification {{n.type}}">
+	<div>
+		<div *ngFor="let n of notifications" class="notification {{n.type}}">
 			<h3>{{n.type}}</h3>
 			<p>{{n.msg}}</p>
 			<span class="fui-cross" onclick="this.parentNode.parentNode.removeChild(this.parentNode);" title="Close"></span>
 		</div>
-	</template>
+	</div>
 	<div class="block-section" id="page-content">
 		<div class="grid-100 grid-parent">
 			<left-nav *ngIf="!noNav"></left-nav>
-			<div class="mobile-grid-100 grid-parent" *ngIf="error">
-				<div class="content-holder center-widget" [ngSwitch]="error.code">
-					<div class="grid-100 grid-parent" *ngSwitchCase="404">
-						<h1>All influencers decided to eat cake today.</h1>
-						<p>404: We will be back soon.</p>
-					</div>
-				</div>
-			</div>
-			<router-outlet [class.hidden]="error && error.code === 404"></router-outlet>
+			<router-outlet></router-outlet>
 			<div class="clearfix"></div>
 		</div>
 	</div>
