--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -5,8 +5,8 @@
 				<h2 class="heading">1. Basic campaign settings
 
 					<div class="onoffswitch status" data-for="toggle-status">
-							<input type="checkbox" name="status" class="onoffswitch-checkbox" id="status" [(ngModel)]="data.status">
-							<label class="onoffswitch-label" for="status" (click)="setBool($event)">
+						<input type="checkbox" name="status" class="onoffswitch-checkbox" id="status" [(ngModel)]="data.status">
+						<label class="onoffswitch-label" for="status" (click)="setBool($event)">
 									<span class="onoffswitch-inner"></span>
 									<span class="onoffswitch-switch"></span>
 							</label>
@@ -19,11 +19,22 @@
 						<span class="ttip" title="This image will draw influencers into your campaign. It should represent the product or service you are promoting.">Featured Image: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent" style="user-select: none;">
-						<img-cropper #cropper [image]="data" [settings]="cropperSettings"></img-cropper>
-						<span class="result rounded" *ngIf="data.imageData" >
-							<img [src]="data.imageData" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+						<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
+						<span class="result rounded" *ngIf="data.imageData">
+							<img [src]="data.imageData" width="400px">
 						</span>
-						<br>
+						<div class="dialog" id="selImage">
+							<div style="width: 750px">
+								<h2 class="heading">Select A Featured Image
+									<a href="javascript:" class="fui-cross" (click)="toggleImage()" title="Close" style="float: right"></a>
+								</h2>
+								<img-cropper #cropper [image]="data.imageData" [settings]="cropperSettings"></img-cropper>
+								<span class="result rounded" *ngIf="data.imageData">
+									<img [src]="data.imageData" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+								</span>
+								<div><a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a></div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -51,7 +62,7 @@
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<textarea class="flat-textarea" name="task" placeholder="Post a photo or video of you and our product. An example caption could be: “I love using NIKE throughout my daily life. Checkout more upcoming items from #NIKE”"
-							[(ngModel)]="data.task" required  [disabled]=opts.isEdit></textarea>
+							[(ngModel)]="data.task" required [disabled]=opts.isEdit></textarea>
 					</div>
 				</div>
 				<div class="form-group">
@@ -61,7 +72,7 @@
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<div class="grid-40 mobile-grid-100 grid-parent">
 							<div class="checkbox">
-								<input type="checkbox" name="doTags" id="doTags" [(ngModel)]="opts.tags"  [disabled]=opts.isEdit>
+								<input type="checkbox" name="doTags" id="doTags" [(ngModel)]="opts.tags" [disabled]=opts.isEdit>
 								<label for="doTags">#tag us</label>
 							</div>
 						</div>
@@ -95,7 +106,6 @@
 									required>
 							</div>
 						</div>
-
 
 					</div>
 				</div>
