--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -18,21 +18,27 @@
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						<span class="ttip" title="This image will draw influencers into your campaign. It should represent the product or service you are promoting.">Featured Image: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent" style="user-select: none;">
-						<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
-						<span class="result rounded" *ngIf="data.image">
-							<img [src]="data.image" width="400px">
+					<div class="grid-80 mobile-grid-100 grid-parent">
+						<span class="result rounded" *ngIf="cropData.image">
+							<img [src]="cropData.image" style="max-width: 400px;" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+							<br>
 						</span>
+						<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
 						<div class="dialog" id="selImage">
-							<div style="width: 750px">
+							<div style="width: 750px;" class="nosel">
 								<h2 class="heading">Select A Featured Image
-									<a href="javascript:" class="fui-cross" (click)="toggleImage()" title="Close" style="float: right"></a>
+									<a href="javascript:" class="fui-cross" (click)="toggleImage(true)" title="Close" style="float: right"></a>
 								</h2>
-								<img-cropper #cropper [image]="data" [settings]="cropperSettings"></img-cropper>
-								<span class="result rounded" *ngIf="data.image">
-									<img [src]="data.image" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+								<img-cropper #cropper [image]="cropData" [settings]="cropperSettings"></img-cropper>
+								<span class="result rounded" *ngIf="cropData.image">
+									<img [src]="cropData.image" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
 								</span>
-								<div><a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a></div>
+								<br><br>
+								<div style="float: right;">
+									<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage(true)">Cancel</a>
+									<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
+								</div>
+								<br><br>
 							</div>
 						</div>
 					</div>
