--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -18,22 +18,24 @@
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						<span class="ttip" title="This image will draw influencers into your campaign. It should represent the product or service you are promoting.">Featured Image: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
-					<div class="grid-80 mobile-grid-100 grid-parent">
+					<div class="grid-80 mobile-grid-100 grid-parent" style="margin-top:13px;">
 						<span class="result rounded" *ngIf="cropData.image">
-							<img [src]="cropData.image" style="max-width: 400px;" [width]="cropperSettings.croppedWidth" [height]="cropperSettings.croppedHeight">
+							<img [src]="cropData.image" style="max-width: 500px; border-radius: 10px;" height="200px">
 							<br>
 						</span>
-						<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
+						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a>
+						 | <a href="#" target="_blank">See examples</a>
 						<div class="dialog" id="selImage">
 							<div style="width: 750px;" class="nosel">
 								<h2 class="heading">Select A Featured Image
 									<a href="javascript:" class="fui-cross" (click)="toggleImage(true)" title="Close" style="float: right"></a>
 								</h2>
+
 								<img-cropper #cropper [image]="cropData" [settings]="cropperSettings"></img-cropper>
 								<br><br>
 								<div style="float: right;">
-									<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage(true)">Cancel</a>
-									<a href="javascript:" class="btn btn-block btn-lg btn-green1" (click)="toggleImage()">Select</a>
+									<a href="javascript:" class="btn btn-block btn-xs btn-blue ghost" (click)="toggleImage(true)">Cancel</a>
+									<a href="javascript:" class="btn btn-block btn-xs btn-green1" (click)="toggleImage()">Save cropped image &#187;</a>
 								</div>
 								<br><br>
 							</div>
@@ -55,7 +57,7 @@
 						<span class="ttip" title="You will be billed the full amount upfront. If at the end of your campaign budget remains, you may transfer it via the billing page to another campaign or request the delta be refunded.">Monthly Budget: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="number" min="5" name="budget" step="0.01" placeholder="$5 minimum recommended" class="form-control" [(ngModel)]="data.budget"
+						<input type="number" min="149" name="budget" step="100" placeholder="$150 minimum recommended" class="form-control" [(ngModel)]="data.budget"
 							required>
 					</div>
 				</div>
