--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -24,13 +24,16 @@
 							<br>
 						</span>
 						<a href="javascript:" class="btn btn-xs btn-green1" (click)="toggleImage()">Select</a>
-						 | <a href="#" target="_blank">See examples</a>
 						<div class="dialog" id="selImage">
 							<div style="width: 750px;" class="nosel">
 								<h2 class="heading">Select A Featured Image
 									<a href="javascript:" class="fui-cross" (click)="toggleImage(true)" title="Close" style="float: right"></a>
 								</h2>
-
+								<div>
+									<input id="custom-input" type="file" (change)="setImage($event)">
+									<label for="custom-input" class="btn btn-xs btn-green1"><strong>Choose a file</strong></label>
+								</div>
+								<br>
 								<img-cropper #cropper [image]="cropData" [settings]="cropperSettings"></img-cropper>
 								<br><br>
 								<div style="float: right;">
@@ -57,7 +60,7 @@
 						<span class="ttip" title="You will be billed the full amount upfront. If at the end of your campaign budget remains, you may transfer it via the billing page to another campaign or request the delta be refunded.">Monthly Budget: <img src="/static/img/questionTooltip.png" /></span>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<input type="number" min="149" name="budget" step="100" placeholder="$150 minimum recommended" class="form-control" [(ngModel)]="data.budget"
+						<input type="number" min="150" name="budget" placeholder="$150 minimum recommended" class="form-control" [(ngModel)]="data.budget"
 							required>
 					</div>
 				</div>
