--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -7,6 +7,8 @@
 
 <div class="clearfix br"></div>
 
+	<div>click me, i have candy <input type="text" id="datepicker"></div>
+
 <table class="tbl">
 	<thead>
 		<tr>
