--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -278,7 +278,7 @@
 
 			<br><br>
 			<div class="grid-50 mobile-grid-40 grid-parent">
-				<button class="btn btn-block btn-lg btn-blue ghost" onclick="history.back();">Back</button>
+				<a href="javascript:history.back()" class="btn btn-block btn-lg btn-blue ghost">Back</a>
 			</div>
 			<div class="grid-50 mobile-grid-60 grid-parent align-right">
 				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save &amp; Launch &#187;</button>
