--- a/app/views/forgotPassword.html
+++ b/app/views/forgotPassword.html
@@ -8,7 +8,7 @@
 		<div class="clearfix"></div>
 	</div>
 	<div class="fields">
-		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email.<br><br></div>
+		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email. Please remember to check your spam foler.<br><br></div>
 		<div *ngIf="!success" class="field-item email"><input type="email" placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required
 				pattern="^[^@]+@[^@]+\.[^@]+$"></div>
 		<div *ngIf="error" class="notification error">
