--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -7,7 +7,22 @@
 
 <div class="clearfix br"></div>
 
-	<div>click me, i have candy <input type="text" id="datepicker"></div>
+
+
+		<form class="form-inline">
+		  <div class="form-group">
+		    <label for="exampleInputName2">Report start date:</label>
+		    <input style="max-width:250px;" type="text" class="form-control" id="datepicker" placeholder="Start date...">
+		  </div>
+		  <div class="form-group">
+		    <label for="exampleInputEmail2">Report end date:</label>
+		    <input style="max-width:250px;" type="text" class="form-control" id="datepicker2" placeholder="End date...">
+		  </div>
+		  <button type="submit" class="btn btn-info">Download report &#187;</button>
+		</form>
+
+
+
 
 <table class="tbl">
 	<thead>
