--- a/static/css/progressbar.css
+++ b/static/css/progressbar.css
@@ -226,10 +226,14 @@ button.ui-button::-moz-focus-inner {
 	width: 17em;
 	padding: .2em .2em 0;
 	display: none;
+	background-color:#fff;
+	border:1px solid #dddddd;
 }
 .ui-datepicker .ui-datepicker-header {
 	position: relative;
 	padding: .2em 0;
+	border:1px solid #dddddd;
+	background-color:#eceff4;
 }
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next {
@@ -241,6 +245,7 @@ button.ui-button::-moz-focus-inner {
 .ui-datepicker .ui-datepicker-prev-hover,
 .ui-datepicker .ui-datepicker-next-hover {
 	top: 1px;
+	background-color: #fff;
 }
 .ui-datepicker .ui-datepicker-prev {
 	left: 2px;
@@ -254,7 +259,6 @@ button.ui-button::-moz-focus-inner {
 .ui-datepicker .ui-datepicker-next-hover {
 	right: 1px;
 }
-.ui-datepicker .ui-datepicker-prev span,
 .ui-datepicker .ui-datepicker-next span {
 	display: block;
 	position: absolute;
@@ -262,6 +266,16 @@ button.ui-button::-moz-focus-inner {
 	margin-left: -8px;
 	top: 50%;
 	margin-top: -8px;
+	background-image: url("../img/next-icon.png");
+}
+.ui-datepicker .ui-datepicker-prev span {
+	display: block;
+	position: absolute;
+	left: 50%;
+	margin-left: -8px;
+	top: 50%;
+	margin-top: -8px;
+	background-image: url("../img/previous-icon.png");
 }
 .ui-datepicker .ui-datepicker-title {
 	margin: 0 2.3em;
@@ -298,6 +312,7 @@ button.ui-button::-moz-focus-inner {
 	padding: .2em;
 	text-align: right;
 	text-decoration: none;
+	color: #0083d6;
 }
 .ui-datepicker .ui-datepicker-buttonpane {
 	background-image: none;
@@ -863,7 +878,9 @@ body .ui-tooltip {
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
 	font-weight: normal;
-	color: #555555;
+	color: #0083d6;
+	background-color:#f6f6f6;
+
 }
 .ui-state-default a,
 .ui-state-default a:link,
@@ -878,7 +895,7 @@ body .ui-tooltip {
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
 	font-weight: normal;
-	color: #212121;
+	color: #04be5b;
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
@@ -1117,9 +1134,7 @@ body .ui-tooltip {
 .ui-icon-circle-plus { background-position: 0 -192px; }
 .ui-icon-circle-minus { background-position: -16px -192px; }
 .ui-icon-circle-close { background-position: -32px -192px; }
-.ui-icon-circle-triangle-e { background-position: -48px -192px; }
 .ui-icon-circle-triangle-s { background-position: -64px -192px; }
-.ui-icon-circle-triangle-w { background-position: -80px -192px; }
 .ui-icon-circle-triangle-n { background-position: -96px -192px; }
 .ui-icon-circle-arrow-e { background-position: -112px -192px; }
 .ui-icon-circle-arrow-s { background-position: -128px -192px; }
