--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1428,6 +1428,7 @@ padding-bottom:100px;
 
 .center-widget .form-group label,
 .center-widget .form-group input[type="checkbox"]{
+	display: inline-block;
 	margin:0;
 	margin-bottom: 10px;
 }
@@ -1898,7 +1899,7 @@ input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
 	height: 19px;
 }
 
-.dialog {
+modal, .dialog {
 	margin: auto auto;
 	padding: 0;
 	border: 0;
@@ -1908,18 +1909,18 @@ input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, 0.2);
+	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
 	height: 100%;
 	z-index: 1000;
 	overflow: auto;
 }
 
-.dialog.visible {
+modal.visible, .dialog.visible {
 	display: block;
 }
 
-.dialog > div {
+modal > div, .dialog > div {
 	margin: 10px auto;
 	background: white;
 	padding: 10px 20px;
@@ -1927,8 +1928,12 @@ input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
 	border-radius: 10px;
 }
 
-.dialog > div > h2 {
+modal > div > h2, .dialog > div > h2 {
 	padding-top: 10px !important;
+}
+
+modal > div > .buttons > .btn, .dialog > div > .buttons > .btn {
+	margin-right: 5px;
 }
 
 .select2-container--default .select2-selection--multiple {
