calendar select modal and css changes basic

--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -35,7 +35,7 @@
 	</tbody>
 </table>
 
-<modal title="Select The Report's Date Range" #selDate [buttons]=selDateButtons>
+<modal title="Select a date range for this report" #selDate [buttons]=selDateButtons>
 	<form class="form-inline">
 		<div class="form-group">
 			<label for="startDate" style="min-width: 120px;">Report start date:</label>
