--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1612,6 +1612,7 @@ padding-bottom:100px;
     right: 56px;
     border-radius: 20px;
     transition: all 0.3s ease-in 0s;
+    height: 18px;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
     margin-left: 0;
